# LearnOpenGL

./: .gitignore  CMakeLists.txt
cmake/: CMakeLists.txt  addtarget.cmake
shader/: orange.frag  shader.frag  shader.vert  texture.fs  yellow.frag
test/: CMakeLists.txt
test/include/test/: shaderprogram.hpp
test/src/: shaderprogram.cpp  test.cpp
util/: CMakeLists.txt
util/include/util/: util.hpp
util/src/: util.cpp
